a couple more changes before turning it over for someone else to do.

--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
                             <div class="card-body d-flex flex-column">
                                 <h3 class="h5 card-title mb-2">Resume</h3>
                                 <p class="small text-muted mb-3">
-                                    Upload your most recent resume to
-                                    Drive/OneDrive and link it here.
+                                    A copy of my most recent resume.
                                 </p>
                                 <p class="mb-1"><strong>Link:</strong></p>
                                 <p class="mb-2">
